# MirrorCBX

./: .gitignore  MirrorCBO[deprec].py  README.md  Rastrigin_CBO_reg_ver1.py  Rastrigin_mcbo.py  constrained_cbos  mcbo2.py  mcbo_initialization.py  pyproject.toml  regCBO2  requirements.txt  visualization_mcbo.ipynb
deprc/: CBO_reg.py  MirrorCBO[deprec].py  Rastrigin.py  constraints.py  functional.py  initialization.py  objectives.py
deprc/particledynamic/: __init__.py  cbo.py  projection_cbo.py  regularized_cbo_1.py  regularized_cbo_2.py  regularized_cbo_3.py
experiments/: MirrorCBO[deprec].py  Rastrigin.py  multi_paramter_run.py  precon.csv  run_exp.py
experiments/ElasticNet/: mirrorcbo_EN.py
experiments/ElasticNet/deconvolution/: experiment_setup.py  mirror_vis.py  test_conv.py
experiments/ElasticNet/exactreg/: cbo_vis.py  experiment_setup.py  mirrorcbo_vis.py  mirrorcbo_vis_failure.py
experiments/ElasticNet/nn/: SGD.ipynb  TestSetup.ipynb  experiment_setup.py  (+3 more)
experiments/Hypersurfaces/: run_exp.py
experiments/LogBarrier/: exp_setup.py  mirror_cbo.py
experiments/Preconditioning/: experiment_setup.py  precon.csv  precon.py  test_precon.py
experiments/Simplex/: experiment_setup.py  extract_res.py
mirrorcbo/: functional.py
mirrorcbo/particledynamic/: mcbo.py
mirrorcbx/: __init__.py  constraints.py  mirrorCBO.py  mirrormaps.py  objectives.py  plotting.py  regularization.py  utils.py
mirrorcbx/constrainedCBO/: regCBO3
mirrorcbx/dynamics/: __init__.py  driftconstrainedcbo.py  mirrorcbo.py  reg_combination.py  regcombinationcbo.py  spherecbo.py
(+420 files in other folders)
