[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name="mirrorcbx"
version="0.1.6"
authors = [
    {name = "Tim Roith", email = "tim.roith@desy.de"},
]
description="MirrorCBX"
dependencies = [  
    'numpy', 
    'scipy', 
    'matplotlib',
    'OmegaConf',
    'cbx'
    ]
readme = "README.md"
requires-python = ">3.5.2"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
    ]

[project.optional-dependencies] # Optional dependencies
test = [
    'pytest',
    'torch'
    ]

torch = [
    'torch',
]

[tool.setuptools]
packages = ['mirrorcbx',]


[tool.ruff]
# Enable flake8-bugbear (`B`) rules.
select = ["E", "F", "B"]

# Never enforce `E501` (line length violations).
ignore = ["E501"]

# Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

# Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]
"path/to/file.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]
